# radium

./: .gitattributes  .gitignore  BUILDING.md  Cargo.toml  README.md  TODO.md  build.rs  rustfmt.toml
.github/workflows/: artifacts.yml  integrity.yml
migrations/20211205222800_init/: down.sql  up.sql
src/: constants.rs  main.rs  segments.rs  util.rs
src/commands/: chance.rs  mod.rs  playback.rs  util.rs
src/commands/chance/: mod.rs  roll.rs
src/db/: functions.rs  mod.rs  models.rs  schema.rs
src/event_handlers/: lavalink.rs  mod.rs  serenity.rs
