[package]
name = "radium"
version = "1.12.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A simple music & dice bot made for personal use."

[dependencies]
anyhow = "1.0"
diesel = { version = "1.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "1.4"
dotenv = "0.15"
lavalink-rs = { git = "https://gitlab.com/zedseven/lavalink-rs", features = ["rustls", "serenity"] }
lazy_static = "1.4"
lru = "0.10"
parse_duration = "2.1"
poise = "0.5"
rand = "0.8"
regex = "1.5"
serenity = { version = "0.11", default-features = false, features = ["builder", "client", "gateway", "model", "utils", "collector"] }
shuffle = "0.1"
songbird = "0.3"
sponsor-block = { git = "https://github.com/zedseven/sponsor-block-rs", branch = "dev" }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
url = "2.2"
yansi = "0.5"

[target.'cfg(windows)'.dependencies]
# To have sqlite3.lib be linked automatically
libsqlite3-sys = { version = "0.22", default-features = false, features = ["bundled"] }

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.1", default-features = false, features = ["git", "gitcl"] }

[features]
default = []
tts = []
